# badges

./: Cargo.toml  README.md
contracts/badge721-base/: Cargo.toml
contracts/badge721-base/src/: contract.rs  lib.rs  state.rs
contracts/badges/: Cargo.toml
contracts/badges/src/: badge.rs
contracts/hub/: Cargo.toml  README.md
contracts/hub/examples/: schema.rs
contracts/hub/schema/: badge_response.json  badges_response.json  config_response.json  execute_msg.json  instantiate_msg.json
contracts/hub/src/: contract.rs  error.rs  execute.rs  fee.rs  helpers.rs  query.rs  state.rs
contracts/hub/src/upgrades/: mod.rs  v1_1.rs  v1_2.rs
contracts/hub/tests/: creating.rs  deployment.rs  fee.rs  helpers.rs  minting.rs  purging.rs
contracts/nft/: Cargo.toml  README.md
contracts/nft/examples/: schema.rs
contracts/nft/schema/: execute_msg.json  instantiate_msg.json
contracts/nft/src/: contract.rs  lib.rs
contracts/nft/tests/: mock_querier.rs  tests.rs
schema/: all_nft_info_response.json  collection_info_response.json  execute_msg.json  instantiate_msg.json  nft_info_response.json
scripts/: README.md  package-lock.json  package.json
scripts/src/: 2_store_codes.ts  3_instantiate.ts  4_create_airdrop.ts  5_create_by_key.ts  6_create_by_keys.ts  7_claim.ts  8_migrate.ts  helpers.ts  keystore.ts
server/: package-lock.json  package.json  tsconfig.json
server/src/: badge-server.ts  utils.ts
server/src/constants/: env.ts  index.ts  other.ts
