[workspace]
members = [
    "contracts/*",
    "packages/*",
    ]

[workspace.package]
version    = "0.1.0"
authors    = ["A Hardnett <returniflost@skiff.com>"]
edition    = "2021"
homepage   = "https://dash.terp.network/w/badges"
repository = "https://github.com/terpnetwork/badges"
license    = "GPL-3.0-or-later"
keywords   = ["nft", "cosmos", "cosmwasm", "terpnetwork"]

[workspace.dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std    = "1.2.1"
cw2             = "1.1.0"
cw721           = "0.18"
cw721-base      = "0.18"
cw-item-set     = { version = "0.7", default-features = false, features = ["iterator"] }
cw-storage-plus = "1.0"
# we can't use cw-utils v1.0 because sg1 still uses 0.16
cw-utils        = "1.0.1"
hex             = "0.4"
schemars        = "0.8"
serde           = { version = "1.0", default-features = false }
sha2            = "0.10"
thiserror       = "1"
cw-ownable           = "0.5.1"
url                  = "2.2.2"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
