[package]
name        = "badge-hub"
description = "Badge Hub contract is where event organizers create, mint, or edit badges."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
library = []

[dependencies]
badges          = { path = "../../packages/badges" }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-item-set     = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
hex             = { workspace = true }
serde           = { workspace = true }
badge-fee       = { path = "../../packages/badge-fee" }
badge721        = { path = "../../packages/badge721" }
badge721-base   = { path = "../../packages/badge721-base" }
cw-metadata     = { path = "../../packages/cw-metadata" }
badge-std       = { path = "../../packages/badge-std" }
sha2            = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
k256 = "0.11"
rand = "0.8"
