[package]
name        = "badge-nft"
description = "Badge NFT is the implementation of SG-721 contract for the Badges project"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
library = []

[dependencies]
badges          = { path = "../../packages/badges" }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
badge721-base   = { path = "../../packages/badge721-base" }
badge721        = { path = "../../packages/badge721" }
badge-std       = { path = "../../packages/badge-std" }
cw-metadata     = { path = "../../packages/cw-metadata" }

[dev-dependencies]
cw721-base = { workspace = true }
