[package]
name        = "tea-nft"
description = "Tea NFT is the implementation of SG-721 contract for the Tea-Hub project"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
library = []

[dependencies]
tea           = { path = "../../packages/tea" }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
cw721            = { workspace = true }
terp721-base     = { workspace = true }
terp721          = { workspace = true }
terp-sdk         = { workspace = true }
terp-metadata    = { workspace = true }

[dev-dependencies]
cw721-base = { workspace = true }
